# CIL

./: .clang-format  .gitattributes  .gitignore  .gitpod.dockerfile  .gitpod.yml  CMakeLists.txt  Makefile.am  configure.ac
.github/workflows/: cmake.yml
examples/: CMakeLists.txt  Makefile.am  blur.cpp  brightness.cpp  compare.cpp  contrast.cpp  crop.cpp  drawPoint.cpp  flipImage.cpp  padImage.cpp  plainPPM.cpp  remove_red_from_rgb.cpp  resize.cpp  zoom.cpp
examples/JPEG/: CMakeLists.txt  Makefile.am  edgeDetection.cpp  invert.cpp  remove_red_from_rgb.cpp  rgb_to_grayscale.cpp
examples/PNG/: CMakeLists.txt  Makefile.am  flipImage.cpp  grayscale.cpp  noRedFilter.cpp  rotateImage.cpp
include/: Makefile.am
include/CIL/: Drawing.hpp  ImageHandler.hpp  ImageInfo.hpp  ImageMatrix.hpp  Pixel.hpp  ThreadHandler.hpp  Transformations.hpp
include/CIL/Core/: Coordinate.hpp  Debug.hpp  DetachedFPPixel.hpp  Types.hpp  Utils.hpp
include/CIL/JPEG/: JPEGCore.hpp  JPEGHandler.hpp
include/CIL/PNG/: PNGCore.hpp  PNGHandler.hpp
include/CIL/PPM/: PPMHandler.hpp
lib/: CMakeLists.txt  Drawing.cpp  ImageHandler.cpp  ImageInfo.cpp  ImageMatrix.cpp  Makefile.am  Pixel.cpp  ThreadHandler.cpp  Transformations.cpp
lib/Core/: CMakeLists.txt  Coordinate.cpp  DetachedFPPixel.cpp  Utils.cpp
lib/JPEG/: CMakeLists.txt  JPEGCore.cpp  JPEGHandler.cpp  Makefile.am  README.md
lib/PNG/: CMakeLists.txt  Makefile.am  PNGCore.cpp  PNGHandler.cpp
lib/PPM/: CMakeLists.txt  PPMHandler.cpp
tests/: CMakeLists.txt  Makefile.am  brightness.cpp  crop.cpp  flip.cpp  grayscale.cpp  in.ppm  resize.cpp  rotate.cpp  zoom.cpp
tests/results/: brightness-1.ppm  crop-1.ppm  flip-1.ppm  grayscale-1.ppm  resize-1.ppm  rotate-1.ppm  zoom-1.ppm
tools/: CMakeLists.txt  cli.cpp
tools/helpers/: handler.hpp
