set(JPEG_SPECIFIC_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/JPEGCore.cpp ${CMAKE_CURRENT_SOURCE_DIR}/JPEGHandler.cpp)

target_sources(cil PRIVATE ${JPEG_SPECIFIC_SOURCES})

target_include_directories(cil PRIVATE ${${ACTIVE_JPEG_LIB}_INCLUDE_DIRS})

target_link_libraries(cil PRIVATE ${${ACTIVE_JPEG_LIB}_LINK_LIBRARIES})